--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -49,7 +49,7 @@
 	@attachRules = 1,1,0,0,1
 
 	// --- standard part parameters ---
-	@mass = 2.580
+	@mass = 2.455
 	@dragModelType = default
 	@maximum_drag = 0.01
 	@minimum_drag = 0.01
@@ -101,7 +101,7 @@
 		
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 328
+		optimumAirspeed = 329
 		liftArea = 0.045
 		steerMult = 10
 		maxTorque = 150
@@ -721,7 +721,7 @@
     @title = 8A61 Zemlya
     @description = The OKB-1 8A61/R-11 "Zemlya" (SS-1B) "Scud" Soviet tactical ballistic missile launched from the 9P117 launcher of 8К11 Complex or 9K72 in case of R-17. It was the first of several similar Soviet missiles to be given the reporting name Scud.
 	@rescaleFactor = 1.63636363636
-	@mass = 4.4
+	@mass = 5.409
 	-MODULE[TweakScale] {}
 	
 	MODULE {
@@ -736,6 +736,15 @@
 		-blastRadius = 50
 		-blastPower = 35
 		-blastHeat = 42
+		
+		// --- Propulsion ---
+		thrust = 81.395
+		cruiseThrust = 0
+		dropTime = 0.1
+		boostTime = 92
+		cruiseTime = 0
+		decoupleSpeed = 5
+		decoupleForward = true
 	}
 }
 @PART[MK141GMLS]:NEEDS[SMA] {
@@ -850,34 +859,30 @@
 		targetingType = radar
 		activeRadarRange = 8000
 		maxOffBoresight = 90
-		lockedSensorFOV = 7
-		radarLOAL = true
-		
-		//Terminal Guidance
-		
-		// --- Missile specific ---
+		lockedSensorFOV = 8
+		radarLOAL = false
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 10
+		DetonationDistance = 15
 	  
 		// --- Propulsion ---
-		thrust = 90
-		cruiseThrust = 22 
+		thrust = 280
+		cruiseThrust = 22
 		dropTime = 0
-		boostTime = 2.6
+		boostTime = 4
 		cruiseTime = 18.7
 		decoupleSpeed = 5
 		decoupleForward = true
 		
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 775
+		optimumAirspeed = 500
 		liftArea = 0.003
-		steerMult = 8
-		maxTorque = 80
-		maxAoA = 14
-		maxTurnRateDPS = 3
+		steerMult = 60
+		maxTorque = 140
+		maxAoA = 40
+		maxTurnRateDPS = 24
 		torqueRampUp = 100
 	  
 		// --- Booster & Animation & Sound ---
@@ -898,7 +903,7 @@
 		
 		// --- Engagement Rules --- 
 		minStaticLaunchRange = 1000
-		maxStaticLaunchRange = 15000
+		maxStaticLaunchRange = 12000
 		engageAir = true
 		engageMissile = false
 		engageGround = false
