--- a/EW/Categories.cfg
+++ b/EW/Categories.cfg
@@ -126,7 +126,7 @@ SUBCATEGORY {
 	FILTER {
 		CHECK {
 			type = name
-			value = 4K40Termit, aam_AIM7E, aam_AIM9D, aam_R3R, aam_R3S, aam_R530, aam_R530E, aam_R98R, aam_R98T, aam_RedTop, agm_AGM12C, agm_AGM28, agm_AGM45, agm_Kh22, agm_Kh66, agm_KSR2, agm_RB04C, S125NevaMissile, sam_3M8, sam_5V21, sam_9M38, sam_BloodhoundMk2, sam_GWS20, sam_Masurca, sam_MIM23, sam_MIM72, sam_RIM24, sam_RIM8, SkudD, ssm_9M14, ssm_Swingfire
+			value = 4K40Termit, aam_AIM7E, aam_AIM9D, aam_R3R, aam_R3S, aam_R530, aam_R530E, aam_R98R, aam_R98T, aam_RedTop, agm_AGM12C, agm_AGM28, agm_AGM45, agm_Kh22, agm_Kh66, agm_KSR2, agm_RB04C, S125NevaMissile, sam_3M8, sam_5V21, sam_BloodhoundMk2, sam_GWS20, sam_Masurca, sam_MIM23, sam_MIM72, sam_RIM24, sam_RIM8, SkudD, ssm_9M14, ssm_Swingfire, sam_9M32
 		}
     }	
 	FILTER {
@@ -182,7 +182,7 @@ SUBCATEGORY {
 	FILTER {
 		CHECK {
 			type = name
-			value = 9M120, 9M121, aam_AIM9M, ALASM, bahaAGM-114, bahaAgm86B, bahaClusterBomb, bahaHarm, bahaRBS-15ALCruise, bahaRBS-15Cruise, PL-8B, StingRayBDATorpedo, THERIM-67B, YJ9
+			value = 9M120, 9M121, aam_AIM9M, ALASM, bahaAGM-114, bahaAgm86B, bahaClusterBomb, bahaHarm, bahaRBS-15ALCruise, bahaRBS-15Cruise, PL-8B, StingRayBDATorpedo, THERIM-67B, YJ9, sam_9M38
 		}
     }	
 	FILTER {
