--- a/Missiles/aam_K98.cfg
+++ b/Missiles/aam_K98.cfg
@@ -34,7 +34,7 @@
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 0.29
+	mass = 0.285
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -57,13 +57,10 @@
 		radarLOAL = false
 		
 		// --- Missile specific ---
-		agmDescentRatio = 4
-		heatThreshold = 320
 		allAspect = false
 		
 		// --- Warhead ---
-		proxyDetonate = true
-		DetonationDistance = 10
+		proxyDetonate = false
 		
 		// --- Propulsion ---
 		thrust = 109.834
@@ -76,10 +73,10 @@
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 650
+		optimumAirspeed = 1270
 		liftArea = 0.002
 		steerMult = 4
-		maxTorque = 200
+		maxTorque = 52
 		maxAoA = 20
 		maxTurnRateDPS = 10
 		torqueRampUp = 100
@@ -96,7 +93,7 @@
 		
 
 		// --- Engagement Rules --- 
-		minStaticLaunchRange = 200
+		minStaticLaunchRange = 0
 		maxStaticLaunchRange = 20000
 		engageAir = true
 		engageMissile = false
@@ -145,7 +142,7 @@ PART {
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 0.29
+	mass = 0.265
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -163,30 +160,28 @@ PART {
 		homingType = aam
 		targetingType = heat
 		activeRadarRange = 0
-		maxOffBoresight = 50
-		lockedSensorFOV = 10
+		maxOffBoresight = 20
+		lockedSensorFOV = 2.5
 		radarLOAL = false
 		
 		lockedSensorFOVBias {
 			key = 0 1 0 0
-			key = 3 0.9 0 0
-			key = 5 0.7 0 0
+			key = 0.7 0.9 0 0
+			key = 1.25 0.7 0 0
         }
         lockedSensorVelocityBias {
             key = 0 1
 			key = 90 0.7
-			key = 180 0
+			key = 180 0.5
         }
 
 		
 		// --- Missile specific ---
-		agmDescentRatio = 4
-		heatThreshold = 180
+		heatThreshold = 80
 		allAspect = false
 		
 		// --- Warhead ---
-		proxyDetonate = true
-		DetonationDistance = 10
+		proxyDetonate = false
 
 		// --- Propulsion ---
 		thrust = 109.834
@@ -199,10 +194,10 @@ PART {
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 650
+		optimumAirspeed = 1042
 		liftArea = 0.02
 		steerMult = 4
-		maxTorque = 200
+		maxTorque = 52
 		maxAoA = 20
 		maxTurnRateDPS = 10
 		torqueRampUp = 100
@@ -219,7 +214,7 @@ PART {
 		
 
 		// --- Engagement Rules --- 
-		minStaticLaunchRange = 200
+		minStaticLaunchRange = 0
 		maxStaticLaunchRange = 20000
 		engageAir = true
 		engageMissile = false
@@ -268,7 +263,7 @@ PART {
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 0.29
+	mass = 0.285
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -331,7 +326,7 @@ PART {
 		
 
 		// --- Engagement Rules --- 
-		minStaticLaunchRange = 200
+		minStaticLaunchRange = 0
 		maxStaticLaunchRange = 24000
 		engageAir = true
 		engageMissile = false
@@ -380,7 +375,7 @@ PART {
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 0.25
+	mass = 0.265
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -454,7 +449,7 @@ PART {
 		
 
 		// --- Engagement Rules --- 
-		minStaticLaunchRange = 1000
+		minStaticLaunchRange = 0
 		maxStaticLaunchRange = 20000
 		engageAir = true
 		engageMissile = false
