--- a/Missiles/agm_AGM12C.cfg
+++ b/Missiles/agm_AGM12C.cfg
@@ -55,18 +55,11 @@
 		activeRadarRange = 0
 		maxOffBoresight = 40
 		lockedSensorFOV = 7
-		radarLOAL = true
-		
-		//Terminal Guidance
-		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
-		terminalGuidanceType = heat
-		terminalGuidanceDistance = 0
+		radarLOAL = false
 		
 		// --- Missile specific ---
 		beamCorrectionFactor = 1
 		beamCorrectionDamping = .0075
-		heatThreshold = 320
 		allAspect = false
 		
 		// --- Warhead ---
@@ -105,7 +98,7 @@
 
 		// --- Engagement Rules --- 
 		minStaticLaunchRange = 200
-		maxStaticLaunchRange = 19000
+		maxStaticLaunchRange = 18000
 		engageAir = false
 		engageMissile = false
 		engageGround = true
