--- a/Missiles/agm_AGM45.cfg
+++ b/Missiles/agm_AGM45.cfg
@@ -54,18 +54,16 @@
 		activeRadarRange = 0
 		maxOffBoresight = 60
 		lockedSensorFOV = 7
-		radarLOAL = true
-		
-		//Terminal Guidance
-		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
-		terminalGuidanceType = heat
-		terminalGuidanceDistance = 0
+		radarLOAL = false
 		
 		// --- Missile specific ---
 		agmDescentRatio = 1.45
-		heatThreshold = 320
-		allAspect = false
+		
+		//Terminal Guidance
+		terminalManeuvering = false // Shaking before hit to prevent CIWS.
+		terminalGuidanceShouldActivate = true // Terminal Guidance Kit
+		terminalGuidanceType = antirad
+		terminalGuidanceDistance = 16000
 		
 		// --- Warhead ---
 		proxyDetonate = true
