--- a/Missiles/agm_Kh22.cfg
+++ b/Missiles/agm_Kh22.cfg
@@ -49,27 +49,28 @@
 		
 		// --- Targeting ---
 		missileType = missile
-		homingType = AGM
-		targetingType = radar
-		activeRadarRange = 38000
-		maxOffBoresight = 60
+		homingType = cruise
+		targetingType = GPS
+		activeRadarRange = 50000
+		maxOffBoresight = 120
 		lockedSensorFOV = 20
 		radarLOAL = true
 		activeRadarLockTrackCurve {
 			key = 0 0
-			key = 1 100
-			key = 38 120
+			key = 0 60
 		}
 		
 		//Terminal Guidance
 		terminalManeuvering = false // Shaking before hit to prevent CIWS.
 		terminalGuidanceShouldActivate = true // Terminal Guidance Kit
 		terminalGuidanceType = radar
-		terminalGuidanceDistance = 38000
+		terminalGuidanceDistance = 50000
 		
 		// --- Missile specific ---
-		agmDescentRatio = 1
-		heatThreshold = 100
+		minLaunchSpeed = 100
+		CruiseSpeed = 1000
+		CruisePredictionTime = 50
+		CruiseAltitude = 27000
 		allAspect = false
 		
 		// --- Warhead ---
@@ -77,10 +78,10 @@
 		DetonationDistance = 2
 	
 		// --- Propulsion ---
-		thrust = 320
-		cruiseThrust = 150
+		thrust = 360
+		cruiseThrust = 220
 		dropTime = 2
-		boostTime = 5
+		boostTime = 10
 		cruiseTime = 300
 		decoupleSpeed = 10
 		decoupleForward = true
@@ -89,10 +90,10 @@
 		aero = true
 		optimumAirspeed = 1577.8
 		liftArea = 0.04
-		steerMult = 5
-		maxTorque = 90
-		maxAoA = 10
-		maxTurnRateDPS = 10
+		steerMult = 40
+		maxTorque = 240
+		maxAoA = 30
+		maxTurnRateDPS = 20
 		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
@@ -116,6 +117,6 @@
 
 	MODULE {
 		name = BDExplosivePart
-		tntMass = 1000
+		tntMass = 30000
 	}
 }
