--- a/Missiles/sam_BloodhoundMk1.cfg
+++ b/Missiles/sam_BloodhoundMk1.cfg
@@ -49,10 +49,10 @@ PART {
 		
 		// --- Targeting ---
 		missileType = missile
-		homingType = AAMLead
+		homingType = AAM
 		targetingType = radar
 		activeRadarRange = 0
-		maxOffBoresight = 120
+		maxOffBoresight = 90
 		lockedSensorFOV = 6
 		radarLOAL = false
 		
@@ -64,10 +64,10 @@ PART {
 		DetonationDistance = 50
 
 		// --- Propulsion ---
-		thrust = 250
-		cruiseThrust = 23
+		thrust = 500
+		cruiseThrust = 46
 		dropTime = 0
-		boostTime = 6.6
+		boostTime = 3
 		cruiseTime = 82
 		decoupleSpeed = 10
 		decoupleForward = true
@@ -77,9 +77,9 @@ PART {
 		aero = true
 		liftArea = 0.0193
 		steerMult = 80
-		maxTorque = 210
+		maxTorque = 240
 		maxAoA = 40
-		maxTurnRateDPS = 22
+		maxTurnRateDPS = 24
 		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
@@ -159,22 +159,14 @@ PART {
 		
 		// --- Targeting ---
 		missileType = missile
-		homingType = AAMLead
+		homingType = AAM
 		targetingType = radar
 		activeRadarRange = 0
 		maxOffBoresight = 180
 		lockedSensorFOV = 7
-		radarLOAL = true
-		
-		//Terminal Guidance
-		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
-		terminalGuidanceType = heat
-		terminalGuidanceDistance = 0
+		radarLOAL = false
 		
 		// --- Missile specific ---
-		agmDescentRatio = 4
-		heatThreshold = 100
 		allAspect = false
 		
 		// --- Warhead ---
@@ -182,10 +174,10 @@ PART {
 		DetonationDistance = 35
 
 		// --- Propulsion ---
-		thrust = 320
-		cruiseThrust = 23
+		thrust = 645
+		cruiseThrust = 46
 		dropTime = 0
-		boostTime = 6.5
+		boostTime = 3
 		cruiseTime = 220
 		decoupleSpeed = 10
 		decoupleForward = true
@@ -194,10 +186,10 @@ PART {
 		optimumAirspeed = 755
 		aero = true
 		liftArea = 0.0193
-		steerMult = 8
-		maxTorque = 210
-		maxAoA = 25
-		maxTurnRateDPS = 19
+		steerMult = 88
+		maxTorque = 340
+		maxAoA = 40
+		maxTurnRateDPS = 24
 		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
@@ -214,7 +206,7 @@ PART {
 
 		// --- Engagement Rules --- 
 		minStaticLaunchRange = 2000
-		maxStaticLaunchRange = 150000
+		maxStaticLaunchRange = 190000
 		engageAir = true
 		engageMissile = false
 		engageGround = false
