--- a/Missiles/sam_GWS20.cfg
+++ b/Missiles/sam_GWS20.cfg
@@ -59,40 +59,32 @@
 		homingType = aam
 		targetingType = radar
 		activeRadarRange = 0
-		maxOffBoresight = 90
+		maxOffBoresight = 180
 		lockedSensorFOV = 3
 		radarLOAL = false
 		
-		//Terminal Guidance
-		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
-		terminalGuidanceType = heat
-		terminalGuidanceDistance = 0
-		
 		// --- Missile specific ---
-		agmDescentRatio = 4
-		heatThreshold = 320
 		allAspect = false
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 1
+		DetonationDistance = 10
 
 		// --- Propulsion ---
-		thrust = 2
+		thrust = 3
 		cruiseThrust = 1
 		dropTime = 0.1
 		boostTime = 14
 		cruiseTime = 2
 		decoupleSpeed = 5
-		decoupleForward = false
+		decoupleForward = true
 
 		// --- Aerodynamics ---
 		aero = true
 		optimumAirspeed = 274.4
 		liftArea = 0.002
-		steerMult = 4
-		maxTorque = 3.5
+		steerMult = 5
+		maxTorque = 5
 		maxAoA = 10
 		maxTurnRateDPS = 10
 		torqueRampUp = 50
@@ -111,7 +103,7 @@
 		minStaticLaunchRange = 200
 		maxStaticLaunchRange = 5000
 		engageAir = true
-		engageMissile = false
+		engageMissile = true
 		engageGround = false
 		engageSLW = false
 	}
