--- a/Missiles/sam_MIM72.cfg
+++ b/Missiles/sam_MIM72.cfg
@@ -33,7 +33,7 @@ PART {
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 0.085
+	mass = 0.086
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -52,51 +52,44 @@ PART {
 		targetingType = heat
 		activeRadarRange = 0
 		maxOffBoresight = 40
-		lockedSensorFOV = 3
+		lockedSensorFOV = 2.5
 		radarLOAL = false
 		
 		lockedSensorFOVBias {
 			key = 0 1 0 0
-			key = 3 0.7 0 0
+			key = 1.25 0.7 0 0
         }
         lockedSensorVelocityBias {
             key = 0 1
 			key = 90 0.7
-			key = 180 0
+			key = 180 0.5
         }
 		
-		//Terminal Guidance
-		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
-		terminalGuidanceType = heat
-		terminalGuidanceDistance = 0
-		
 		// --- Missile specific ---
-		agmDescentRatio = 4
-		heatThreshold = 240
+		heatThreshold = 90
 		allAspect = false
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 2
+		DetonationDistance = 5
 
 		// --- Propulsion ---
-		thrust = 12.2
+		thrust = 12.811
 		cruiseThrust = 4
 		dropTime = 0.1
-		boostTime = 4.7
-		cruiseTime = 0
+		boostTime = 5
+		cruiseTime = 0.5
 		decoupleSpeed = 5
-		decoupleForward = false
+		decoupleForward = true
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 894
+		optimumAirspeed = 600
 		liftArea = 0.002
-		steerMult = 4
-		maxTorque = 35
-		maxAoA = 20
-		maxTurnRateDPS = 21
+		steerMult = 90
+		maxTorque = 70
+		maxAoA = 22
+		maxTurnRateDPS = 30
 		torqueRampUp = 200
 		
 		// --- Booster & Animation & Sound ---
