--- a/Missiles/sam_Masurca.cfg
+++ b/Missiles/sam_Masurca.cfg
@@ -41,7 +41,7 @@
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 2.1
+	mass = 2.098
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -59,47 +59,39 @@
 		homingType = aam
 		targetingType = radar
 		activeRadarRange = 0
-		maxOffBoresight = 60
+		maxOffBoresight = 300
 		lockedSensorFOV = 6
 		radarLOAL = false
 		
-		//Terminal Guidance
-		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
-		terminalGuidanceType = heat
-		terminalGuidanceDistance = 0
-		
 		// --- Missile specific ---
-		agmDescentRatio = 4
-		heatThreshold = 320
 		allAspect = false
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 1
+		DetonationDistance = 60
 
 		// --- Propulsion ---
-		thrust = 170	
-		cruiseThrust = 80
+		thrust = 336	
+		cruiseThrust = 68
 		dropTime = 0.1
 		boostTime = 5
-		cruiseTime = 20
+		cruiseTime = 24
 		decoupleSpeed = 5
-		decoupleForward = false
+		decoupleForward = true
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 1029
+		optimumAirspeed = 1200
 		liftArea = 0.002
-		steerMult = 12
-		maxTorque = 150
-		maxAoA = 30
+		steerMult = 50
+		maxTorque = 40 //420
+		maxAoA = 26
 		maxTurnRateDPS = 30
 		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
 		decoupleBoosters = true
-		boosterMass = 1.1
+		boosterMass = 1.148
 		boosterDecoupleSpeed = 2
 		boostTransformName = MasurcaB
 		boostExhaustTransformName = boostTransform
