--- a/Missiles/sam_RIM24.cfg
+++ b/Missiles/sam_RIM24.cfg
@@ -45,7 +45,7 @@
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
-	angularDrag = 2
+	angularDrag = 0.5
 	crashTolerance = 5
 	maxTemp = 3600
 
@@ -59,42 +59,34 @@
 		homingType = aam
 		targetingType = radar
 		activeRadarRange = 0
-		maxOffBoresight = 30
-		lockedSensorFOV = 3
+		maxOffBoresight = 90
+		lockedSensorFOV = 10
 		radarLOAL = false
 		
-		//Terminal Guidance
-		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
-		terminalGuidanceType = heat
-		terminalGuidanceDistance = 0
-		
 		// --- Missile specific ---
-		agmDescentRatio = 4
-		heatThreshold = 320
 		allAspect = false
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 5
+		DetonationDistance = 30
 
 		// --- Propulsion ---
-		thrust = 52
-		cruiseThrust = 10.5
-		dropTime = 0.1
-		boostTime = 4
+		thrust = 128
+		cruiseThrust = 50
+		dropTime = 0
+		boostTime = 3
 		cruiseTime = 22
-		decoupleSpeed = 5
-		decoupleForward = false
+		decoupleSpeed = 10
+		decoupleForward = true
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 1029
-		liftArea = 0.002
-		steerMult = 12
+		optimumAirspeed = 1000
+		liftArea = 0.05
+		steerMult = 90
 		maxTorque = 150
-		maxAoA = 30
-		maxTurnRateDPS = 30
+		maxAoA = 35
+		maxTurnRateDPS = 26
 		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
