--- a/Missiles/sam_9M32.cfg
+++ b/Missiles/sam_9M32.cfg
@@ -38,7 +38,7 @@
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
-	angularDrag = 2
+	angularDrag = 0.001
 	crashTolerance = 5
 	maxTemp = 3600
 
@@ -52,36 +52,27 @@
 		homingType = aam
 		targetingType = heat
 		activeRadarRange = 0
-		maxOffBoresight = 70
-		lockedSensorFOV = 10
+		maxOffBoresight = 15
+		lockedSensorFOV = 6
 		radarLOAL = false
 		
 		lockedSensorFOVBias {
 			key = 0 1 0 0
-			key = 3 0.8 0 0
-			key = 5 0.5 0 0
+			key = 2 0.8 0 0
+			key = 3 0.5 0 0
         }
         lockedSensorVelocityBias {
             key = 0 1
 			key = 90 0.8
-			key = 180 0
+			key = 180 0.6
         }
 		
-		//Terminal Guidance
-		terminalManeuvering = false // Shaking before hit to prevent CIWS.
-		terminalGuidanceShouldActivate = false // Terminal Guidance Kit
-		terminalGuidanceType = heat
-		terminalGuidanceDistance = 0
-		
-
-		
 		// --- Missile specific ---
-		agmDescentRatio = 4
-		heatThreshold = 50
+		heatThreshold = 5
 		allAspect = false
 		deployAnimationName = deploy
 		deployedDrag = 0.02
-		deployTime = 0.5
+		deployTime = 0.3
 		
 		// --- Warhead ---
 		proxyDetonate = true
@@ -90,19 +81,19 @@
 		// --- Propulsion ---
 		thrust = 5.4
 		cruiseThrust = 1
-		dropTime = 0.1
-		boostTime = 1
-		cruiseTime = 6
-		decoupleSpeed = 5
-		decoupleForward = false
+		dropTime = 0.3
+		boostTime = 0.5
+		cruiseTime = 2
+		decoupleSpeed = 19
+		decoupleForward = true
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 430
-		liftArea = 0.002
-		steerMult = 2
-		maxTorque = 15
-		maxAoA = 15
+		optimumAirspeed = 800
+		liftArea = 0.00001
+		steerMult = 3
+		maxTorque = 30
+		maxAoA = 30
 		maxTurnRateDPS = 15
 		torqueRampUp = 50
 		
